@@ -38,6 +38,7 @@ public:
     bool excludeUnpermitted = true;
     bool dbFlagConst = false;
     bool considerDateModified = true;
+    bool considerMoved = false;
 
     FilterMode filter_mode = FilterMode::NotSet;
     QStringList filter_last_exts;
@@ -65,6 +66,7 @@ private:
     static const QString s_key_instantSaving;
     static const QString s_key_excludeUnPerm;
     static const QString s_key_considerDateModified;
+    static const QString s_key_considerMoved;
     static const QString s_key_history_lastFsPath;
     static const QString s_key_history_recentDbFiles;
     static const QString s_key_view_geometry;
